src/objects/Volunteer_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Contact__r.LastName  &amp; &quot;, &quot; &amp;  Contact__r.FirstName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Defaults to 1. Increase if this person is bringing additional people whom you are not directly tracking as contacts, and won&apos;t be logging individual volunteer hours against.</inlineHelpText>
        <label>Number of Volunteers</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date_Time__c</fullName>
        <inlineHelpText>The actual date &amp; time the volunteer is planning on starting.</inlineHelpText>
        <label>Planned Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Date_Time__c</fullName>
        <formula>Volunteer_Shift__r.Start_Date_Time__c</formula>
        <label>Shift Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Note__c</fullName>
        <inlineHelpText>Text information from the system scheduler.</inlineHelpText>
        <label>System Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Worked__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &quot;Completed&quot;), Hours_Worked__c *  Number_of_Volunteers__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Campaign_Name__c</fullName>
        <formula>Volunteer_Job__r.Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Campaign__c</fullName>
        <formula>Volunteer_Job__r.Campaign__c</formula>
        <label>Volunteer Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Volunteer_Recurrence_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Recurrence Schedule</label>
        <referenceTo>Volunteer_Recurrence_Schedule__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Shift</label>
        <referenceTo>Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Hours</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>HoursID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HoursRequiredOnCompletion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Completed&apos;) , ISNULL( Hours_Worked__c ))</errorConditionFormula>
        <errorDisplayField>Hours_Worked__c</errorDisplayField>
        <errorMessage>Please specify the Hours Worked when setting Status to Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusMustBeSet</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c,&quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please specify a Status value.</errorMessage>
    </validationRules>
</CustomObject>